# grib-getter

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  _README.md  config.py  fetch_forecast.py  gfs.toml  index.html  mkdocs.yml  noaa_grib_fetcher.py  noaa_query_builder.py  objects.inv  programmer_preferences.md  project_preferences.md  pyproject.toml  settings.toml
adding_models/: index.html
api/cli/: index.html
api/config/: index.html
api/fetcher/: index.html
api/query_builder/: index.html
architecture/: index.html
configuration/: index.html
docs/: adding_models.md  architecture.md  configuration.md  index.md  installation.md  quickstart.md
docs/api/: cli.md  config.md  fetcher.md  query_builder.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
settings/: gfs.toml
tests/: __init__.py  test_geographic_utils.py
