[project]
name = "grib-getter"
version = "0.1.0"
description = "Bandwidth-optimized GRIB weather data fetcher for NOAA GFS forecasts"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Johnny", email = "johnny111272@users.noreply.github.com"}
]
keywords = ["weather", "grib", "noaa", "gfs", "forecast", "maritime", "sailing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "dynaconf>=3.2.12",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "msgspec>=0.19.0",
    "polars>=1.35.1",
    "pydantic>=2.12.4",
    "rich[jupyter]>=14.2.0",
    "ruff>=0.14.3",
    "tenacity>=9.1.2",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "ty>=0.0.1a25",
    "typer>=0.20.0",
    "xarray>=2025.10.1",
]
