[project]
name = "grib-getter"
version = "0.1.0"
description = "Bandwidth-optimized GRIB weather data fetcher for NOAA GFS forecasts"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Johnny", email = "johnny111272@users.noreply.github.com"}
]
keywords = ["weather", "grib", "noaa", "gfs", "forecast", "maritime", "sailing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dynaconf>=3.2.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]
dev = [
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
]

[tool.basedpyright]
exclude = ["development.py", "development.ipynb", ".venv", "**/__pycache__"]
